tests/lowering/header-declaration-unsupported.lushui
;; TEST fail check

; module-level
; documentation
; here
module =

@foreign
module =
